# CompilerFucker

./: .gitignore  CMakeLists.txt  build.bash  configure
kupi/: MxLexer.g4  MxParser.g4
lib/: builtin.c  mx.c  mx.ll
src/: MxParser.g4  main.cpp  text.txt
src/antlr/: MxLexer.g4  MxParser.g4
src/asm/: ASMallocator.cpp  ASMallocator.h  ASManalyser.cpp  ASManalyser.h  ASMbase.h  ASMbasic.cpp  ASMbuilder.cpp  ASMbuilder.h  ASMcounter.cpp  ASMcounter.h  ASMglobal.cpp  ASMhelper.cpp  ASMinline.cpp  ASMliveliness.cpp  ASMliveliness.h  ASMnode.h  ASMorder.cpp  ASMorder.h  ASMpainter.cpp  ASMregister.h  ASMvalidator.cpp  ASMvalidator.h  ASMvalue.h  ASMvisitor.cpp  ASMvisitor.h
src/ast/: ASTbuilder.cpp  ASTbuilder.h  ASTnode.h  ASTscanner.h  ASTvisitor.cpp  ASTvisitor.h  Mxerror.h  main.cpp  scope.h  utility.h
src/ir/: IRbase.h  IRbasic.h  IRbuilder.cpp  IRbuilder.h  IRconst.cpp  IRconst.h  IRnode.cpp  IRnode.h  IRtype.h  IRvisitor.cpp  IRvisitor.h
src/old_asm/: ASMbuilder.cpp  ASMregister.h  ASMvalidator.cpp  ASMvalidator.h  ASMvisitor.cpp  ASMvisitor.h
src/opt/: mem2reg.h  optimizer.cpp  optmacro.h  optnode.h
src/opt/cfg/: branch.cpp  cfg.cpp  cfg.h  tail.cpp  unreachable.cpp
src/opt/dce/: DCE.cpp  adce.cpp  dae.cpp  dce.cpp  dcebase.cpp  deadcode.h
src/opt/global/: global.h
src/opt/info/: IRinfo.cpp  IRinfo.h  collector.cpp  collector.h  info_debug.h
src/opt/inline/: inline.cpp  inline.h  inlinebase.cpp
src/opt/local/: binary.cpp  cmp.cpp  loadstore.cpp  local.cpp  peephole.h  stack_malloc.cpp
src/opt/loop/: loop.cpp  loop.h  loopbase.h
src/opt/mem2reg/: dominate.h  graph.cpp  helper.cpp  mem2reg.h  memnode.h
src/opt/mx/: mx.cpp  mx.h
src/opt/sccp/: calc.cpp  calc.h  sccp.cpp  sccp.h  single.cpp
src/opt/simu/: simulator.h
